--- a/testing.html
+++ b/testing.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Telegram Stream Embed</title>
-    <style>
-      body, html {
-        margin: 0;
-        padding: 0;
-        background: black;
-        height: 100%;
-      }
-      iframe {
-        border: none;
-        width: 100%;
-        height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Embedded Dailymotion Video</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      padding: 20px;
+      text-align: center;
+    }
+    .video-container {
+      max-width: 800px;
+      margin: 0 auto;
+      background: #fff;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 8px;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="video-container">
+    <h2>Watch My Video</h2>
     <iframe 
-      src="https://file-to-9bot-e7ca0fa0fd5a.herokuapp.com/watch/687f6167eed4f867e91673a9" 
+      src="https://www.dailymotion.com/embed/video/x9ndisk" 
+      allow="autoplay; fullscreen; picture-in-picture" 
       allowfullscreen>
     </iframe>
-  </body>
+  </div>
+
+</body>
 </html>
